--- a/site/src/App.css
+++ b/site/src/App.css
@@ -1,7 +1,7 @@
 
 .App {
   background-color: #1f1f1f;
-
+  height: 100%;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
@@ -11,17 +11,22 @@
   width: 100%;
   font-family: Consolas, monospace;
 }
+
+.about-me {
+  color:#171717;
+}
+
+
+.svg-icons {
+  max-width: 30px;
+  color: #000;
+}
+
 a {
   text-decoration: none;
 }
-#navBar {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  position: fixed;
-  align-items: center;
-  z-index: 3;
-}
+
+
 
 .carousel-images {
   width: 50%;
@@ -227,27 +232,7 @@ p {
   font-size: 1.4em;
 }
 
-.aboutMeText {    
-  width: 90%;
-  height: 100%;
-  background-color: rgba(23, 23, 23, 0.8);
-  border-radius: 5px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  padding: 0px 10px;
-  margin: 1em;
-}
 
-#aboutMeFrame {
-  margin: 1.5em 0;
-  width: 15em;
-  height: 15em;
-  border-radius: 50%;
-  border: 5px solid #5DE950;
-  background-color: rgba(23, 23, 23, 0.8);    
-}
 
 #buttonBox {
   display: flex;
